--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,20 +8,100 @@ environment:
 
 dependencies:
   bloc: ^8.1.4
+
+  # for caching images => https://pub.dev/packages/cached_network_image
+  cached_network_image: ^3.4.1
+
+  # for network requests => https://pub.dev/packages/dio
+  dio: ^5.8.0+1
+
+  # for equality => https://pub.dev/packages/equatable
+  equatable: ^2.0.7
+
+  # for theme => https://pub.dev/packages/flex_color_scheme
+  flex_color_scheme: ^8.1.1
+
   flutter:
     sdk: flutter
+
+  # for state management => https://pub.dev/packages/flutter_bloc
   flutter_bloc: ^8.1.6
+
+  # for environments => https://pub.dev/packages/flutter_dotenv
+  flutter_dotenv: ^5.2.1
+
+  # for useful hooks => https://pub.dev/packages/flutter_hooks
+  flutter_hooks: ^0.20.5
+
   flutter_localizations:
     sdk: flutter
+
+  # for responsibility => https://pub.dev/packages/flutter_screenutil
+  flutter_screenutil: ^5.9.3
+
+  # for svg => https://pub.dev/packages/flutter_svg
+  flutter_svg: ^2.0.17
+
+  # for functional programming => https://pub.dev/packages/fpdart
+  fpdart: ^1.1.1
+
+  # for dependency injection => https://pub.dev/packages/get_it
+  get_it: ^8.0.3
+
+  # for theme or locale management => https://pub.dev/packages/hydrated_bloc
+  hydrated_bloc: ^9.1.5
+
   intl: ^0.19.0
 
+  # for local data source
+  isar: ^3.1.0+1
+  # isar_flutter_libs: ^3.1.0+1
+
+  # for creating api models => https://pub.dev/packages/json_annotation
+  json_annotation: ^4.9.0
+
+  # for app data directories
+  path_provider: ^2.1.5
+
+  # a dio interceptor for developer => https://pub.dev/packages/pretty_dio_logger
+  pretty_dio_logger: ^1.4.0
+
+  # for shimmer effect => https://pub.dev/packages/shimmer
+  shimmer: ^3.0.0
+
+  # for url launcher => https://pub.dev/packages/url_launcher
+  url_launcher: ^6.3.1
+
+dependency_overrides:
+  analyzer: ^6.3.0
+
 dev_dependencies:
+  # for testing bloc => https://pub.dev/packages/bloc_test
   bloc_test: ^9.1.7
+
+  build_runner: ^2.4.15
+
+  flutter_lints: ^5.0.0
+
   flutter_test:
     sdk: flutter
+
+  # for local data source
+  isar_generator: ^3.1.0+1
+
+  # for creating api models => https://pub.dev/packages/json_serializable
+  json_serializable: ^6.9.0
+
+  # for testing => https://pub.dev/packages/mockito
+  mockito: ^5.4.5
+
   mocktail: ^1.0.4
+
   very_good_analysis: ^6.0.0
 
 flutter:
   uses-material-design: true
   generate: true
+
+  assets:
+    - .env
