--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,6 @@ environment:
   sdk: ^3.5.0
 
 dependencies:
-  bloc: ^8.1.4
-
   # for caching images => https://pub.dev/packages/cached_network_image
   cached_network_image: ^3.4.1
 
@@ -25,7 +23,7 @@ dependencies:
     sdk: flutter
 
   # for state management => https://pub.dev/packages/flutter_bloc
-  flutter_bloc: ^8.1.6
+  flutter_bloc: ^9.0.0
 
   # for environments => https://pub.dev/packages/flutter_dotenv
   flutter_dotenv: ^5.2.1
@@ -49,7 +47,7 @@ dependencies:
   get_it: ^8.0.3
 
   # for theme or locale management => https://pub.dev/packages/hydrated_bloc
-  hydrated_bloc: ^9.1.5
+  hydrated_bloc: ^10.0.0
 
   intl: ^0.19.0
 
@@ -77,7 +75,7 @@ dependency_overrides:
 
 dev_dependencies:
   # for testing bloc => https://pub.dev/packages/bloc_test
-  bloc_test: ^9.1.7
+  bloc_test: ^10.0.0
 
   build_runner: ^2.4.15
 
@@ -105,3 +103,6 @@ flutter:
 
   assets:
     - .env
+    - assets/images/
+    - assets/svgs/
+    - assets/lotties/
