--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   get_it: ^8.0.3
 
   # for theme or locale management => https://pub.dev/packages/hydrated_bloc
+  go_router: ^14.8.0
   hydrated_bloc: ^10.0.0
 
   intl: ^0.19.0
@@ -57,6 +58,9 @@ dependencies:
 
   # for creating api models => https://pub.dev/packages/json_annotation
   json_annotation: ^4.9.0
+
+  # for animations exported as json => https://pub.dev/packages/lottie
+  lottie: ^3.3.1
 
   # for app data directories
   path_provider: ^2.1.5
