--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,9 @@ environment:
   sdk: ^3.5.0
 
 dependencies:
+  # for navigation => https://pub.dev/packages/auto_route
+  auto_route: ^8.1.4
+
   # for caching images => https://pub.dev/packages/cached_network_image
   cached_network_image: ^3.4.1
 
@@ -47,7 +50,6 @@ dependencies:
   get_it: ^8.0.3
 
   # for theme or locale management => https://pub.dev/packages/hydrated_bloc
-  go_router: ^14.8.0
   hydrated_bloc: ^10.0.0
 
   intl: ^0.19.0
@@ -78,6 +80,9 @@ dependency_overrides:
   analyzer: ^6.3.0
 
 dev_dependencies:
+  # for navigation => https://pub.dev/packages/auto_route
+  auto_route_generator: ^8.0.0
+
   # for testing bloc => https://pub.dev/packages/bloc_test
   bloc_test: ^10.0.0
 
