--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   # for responsibility => https://pub.dev/packages/flutter_screenutil
   flutter_screenutil: ^5.9.3
 
+  flutter_secure_storage: ^9.2.4
+
   # for svg => https://pub.dev/packages/flutter_svg
   flutter_svg: ^2.0.17
 
@@ -61,6 +63,8 @@ dependencies:
   # for creating api models => https://pub.dev/packages/json_annotation
   json_annotation: ^4.9.0
 
+  logger: ^2.5.0
+
   # for animations exported as json => https://pub.dev/packages/lottie
   lottie: ^3.3.1
 
@@ -69,6 +73,8 @@ dependencies:
 
   # a dio interceptor for developer => https://pub.dev/packages/pretty_dio_logger
   pretty_dio_logger: ^1.4.0
+
+  retrofit: ^4.4.2
 
   # for shimmer effect => https://pub.dev/packages/shimmer
   shimmer: ^3.0.0
@@ -103,6 +109,8 @@ dev_dependencies:
   mockito: ^5.4.5
 
   mocktail: ^1.0.4
+
+  retrofit_generator: ^9.1.9
 
   very_good_analysis: ^6.0.0
 
