--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: demo_app_temp
-description: Demo Application
+name: netflix_clone
+description: This project is a clone of the Netflix app.
 version: 1.0.0+1
 publish_to: none
 
@@ -7,8 +7,8 @@ environment:
   sdk: ^3.5.0
 
 dependencies:
-  # for navigation => https://pub.dev/packages/auto_route
-  auto_route: ^8.1.4
+  # # for navigation => https://pub.dev/packages/auto_route
+  # auto_route: ^8.1.4
 
   # for caching images => https://pub.dev/packages/cached_network_image
   cached_network_image: ^3.4.1
@@ -52,6 +52,7 @@ dependencies:
   get_it: ^8.0.3
 
   # for theme or locale management => https://pub.dev/packages/hydrated_bloc
+  go_router: ^14.8.0
   hydrated_bloc: ^10.0.0
 
   intl: ^0.19.0
@@ -86,8 +87,8 @@ dependency_overrides:
   analyzer: ^6.3.0
 
 dev_dependencies:
-  # for navigation => https://pub.dev/packages/auto_route
-  auto_route_generator: ^8.0.0
+  # # for navigation => https://pub.dev/packages/auto_route
+  # auto_route_generator: ^8.0.0
 
   # for testing bloc => https://pub.dev/packages/bloc_test
   bloc_test: ^10.0.0
