--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,7 @@
         "development",
         "--target",
         "lib/main_development.dart"
+        // "--dart-define=flavor=development"
       ]
     },
     {
@@ -21,14 +22,26 @@
       "request": "launch",
       "type": "dart",
       "program": "lib/main_staging.dart",
-      "args": ["--flavor", "staging", "--target", "lib/main_staging.dart"]
+      "args": [
+        "--flavor", 
+        "staging", 
+        "--target", 
+        "lib/main_staging.dart"
+      // "--dart-define=flavor=staging"
+      ]
     },
     {
       "name": "Launch production",
       "request": "launch",
       "type": "dart",
       "program": "lib/main_production.dart",
-      "args": ["--flavor", "production", "--target", "lib/main_production.dart"]
+      "args": [
+        "--flavor", 
+        "production", 
+        "--target", 
+        "lib/main_production.dart"
+        // "--dart-define=flavor=production"
+      ]
     }
   ]
 }
