--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,123 +7,53 @@ environment:
   sdk: ^3.5.0
 
 dependencies:
-  authentication_repository:
-    path: packages/authentication_repository
-
-  # # for navigation => https://pub.dev/packages/auto_route
-  # auto_route: ^8.1.4
-
-  # for caching images => https://pub.dev/packages/cached_network_image
   cached_network_image: ^3.4.1
-
-  # for network requests => https://pub.dev/packages/dio
   dio: ^5.8.0+1
-
-  # for equality => https://pub.dev/packages/equatable
   equatable: ^2.0.7
-
-  # for theme => https://pub.dev/packages/flex_color_scheme
-  flex_color_scheme: ^8.1.1
-
   flutter:
     sdk: flutter
-
-  # for state management => https://pub.dev/packages/flutter_bloc
   flutter_bloc: ^9.0.0
-
-  # for environments => https://pub.dev/packages/flutter_dotenv
   flutter_dotenv: ^5.2.1
-
-  # for useful hooks => https://pub.dev/packages/flutter_hooks
   flutter_hooks: ^0.20.5
-
   flutter_localizations:
     sdk: flutter
-
-  # for responsibility => https://pub.dev/packages/flutter_screenutil
   flutter_screenutil: ^5.9.3
-
   flutter_secure_storage: ^9.2.4
-
-  # for svg => https://pub.dev/packages/flutter_svg
   flutter_svg: ^2.0.17
-
-  # for functional programming => https://pub.dev/packages/fpdart
   formz: ^0.8.0
   fpdart: ^1.1.1
-
-  # for dependency injection => https://pub.dev/packages/get_it
   get_it: ^8.0.3
-
   go_router: ^14.8.0
-
-  # for theme or locale management => https://pub.dev/packages/hydrated_bloc
   hydrated_bloc: ^10.0.0
-
   injectable: ^2.5.0
   intl: ^0.19.0
-
-  # for local data source
   isar: ^3.1.0+1
   # isar_flutter_libs: ^3.1.0+1
-
-  # for creating api models => https://pub.dev/packages/json_annotation
   json_annotation: ^4.9.0
-
   logger: ^2.5.0
-
-  # for animations exported as json => https://pub.dev/packages/lottie
   lottie: ^3.3.1
-
-  # for app data directories
   path_provider: ^2.1.5
-
-  # a dio interceptor for developer => https://pub.dev/packages/pretty_dio_logger
   pretty_dio_logger: ^1.4.0
-
   retrofit: ^4.4.2
-
-  # for shimmer effect => https://pub.dev/packages/shimmer
   shimmer: ^3.0.0
-
-  # for url launcher => https://pub.dev/packages/url_launcher
   url_launcher: ^6.3.1
-
-  user_repository:
-    path: packages/user_repository
   uuid: ^4.5.1
 
 dependency_overrides:
   analyzer: ^6.3.0
 
 dev_dependencies:
-  # # for navigation => https://pub.dev/packages/auto_route
-  # auto_route_generator: ^8.0.0
-
-  # for testing bloc => https://pub.dev/packages/bloc_test
   bloc_test: ^10.0.0
-
   build_runner: ^2.4.15
-
   flutter_lints: ^5.0.0
-
   flutter_test:
     sdk: flutter
-
-  # for local data source
   injectable_generator: ^2.6.2
   isar_generator: ^3.1.0+1
-
-  # for creating api models => https://pub.dev/packages/json_serializable
   json_serializable: ^6.9.0
-
-  # for testing => https://pub.dev/packages/mockito
   mockito: ^5.4.5
-
   mocktail: ^1.0.4
-
   retrofit_generator: ^9.1.9
-
   very_good_analysis: ^6.0.0
 
 flutter:
@@ -136,3 +66,17 @@ flutter:
     - assets/svgs/
     - assets/lotties/
     - assets/mock/
+
+  fonts:
+    - family: NotoSansThai
+      fonts:
+        - asset: assets/fonts/NotoSansThai-Regular.ttf
+
+        - asset: assets/fonts/NotoSansThai-Medium.ttf
+          weight: 600
+
+        - asset: assets/fonts/NotoSansThai-Black.ttf
+          weight: 700
+
+        - asset: assets/fonts/NotoSansThai-Bold.ttf
+          weight: 900
