--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 
 dependencies:
   cached_network_image: ^3.4.1
+  carousel_slider: ^5.0.0
+  chewie: ^1.10.0
   dio: ^5.8.0+1
   equatable: ^2.0.7
   flutter:
@@ -38,6 +40,8 @@ dependencies:
   shimmer: ^3.0.0
   url_launcher: ^6.3.1
   uuid: ^4.5.1
+  video_player: ^2.9.3
+  youtube_player_flutter: ^9.1.1
 
 dependency_overrides:
   analyzer: ^6.3.0
