--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.0.0
   flutter_dotenv: ^5.2.1
-  flutter_hooks: ^0.20.5
+  # flutter_hooks: ^0.20.5
   flutter_localizations:
     sdk: flutter
   flutter_screenutil: ^5.9.3
