--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   retrofit: ^4.4.2
   shimmer: ^3.0.0
+  stream_transform: ^2.1.1
   url_launcher: ^6.3.1
   uuid: ^4.5.1
   video_player: ^2.9.3
