--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,16 +7,17 @@ environment:
   sdk: ^3.5.0
 
 dependencies:
+  bloc_concurrency: ^0.3.0
   cached_network_image: ^3.4.1
   carousel_slider: ^5.0.0
   chewie: ^1.10.0
   dio: ^5.8.0+1
+  dio_cache_interceptor: ^3.5.1
+  envied: ^1.1.1
   equatable: ^2.0.7
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
-  flutter_dotenv: ^5.2.1
-  # flutter_hooks: ^0.20.5
   flutter_localizations:
     sdk: flutter
   flutter_screenutil: ^5.9.3
@@ -30,13 +31,14 @@ dependencies:
   injectable: ^2.5.0
   intl: ^0.19.0
   isar: ^3.1.0+1
-  # isar_flutter_libs: ^3.1.0+1
   json_annotation: ^4.9.0
   logger: ^2.5.0
   lottie: ^3.3.1
+  page_transition: ^2.2.1
   path_provider: ^2.1.5
   pretty_dio_logger: ^1.4.0
   retrofit: ^4.4.2
+  shared_preferences: ^2.5.2
   shimmer: ^3.0.0
   stream_transform: ^2.1.1
   url_launcher: ^6.3.1
@@ -50,6 +52,8 @@ dependency_overrides:
 dev_dependencies:
   bloc_test: ^10.0.0
   build_runner: ^2.4.15
+  envied_generator: ^1.1.1
+  flutter_gen_runner: ^5.10.0
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
